# Claude-Tutorial-for-Data-Domain

./: .env  01_llm_call.ipynb  README.md  create_dataframe.py  fetch_api.py  invoke_mcp_search.py  main.py  pyproject.toml  search_news.py  test.txt  test_mcp_api.py
Airflow_Project/: README.md
Airflow_Project/dags/: data_fetch.py  data_report.py
claude/: CLAUDE.md  settings.json
claude/agent-memory/code-reviewer/: MEMORY.md  code_review_standards.md
claude/agents/code_reviewer/: code_reviewer.md
claude/agents/orchestrator/: orchestrator.md
claude/hooks/: post_script.py  post_script.txt  pre_script.py  pre_script.txt
claude/orchestrator/: orchestrate.py
claude/skills/fetch_api/: SKILL.md  fetch_data.py
claude/skills/migrate/: SKILL.md
claude/skills/migrate/data/2026-05-07_16-36-22/: dim_customer.parquet  dim_date.parquet  dim_product.parquet  dim_store.parquet  fact_returns.parquet  fact_sales.parquet
claude/skills/migrate/scripts/: csv_to_parquet.py
claude/skills/visualizers/: SKILL.md
claude/skills/visualizers/scripts/: build_kpis_and_visualizations.py  explore_data.py
