[project]
name = "claude-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-anthropic>=1.4.3",
    "httpx>=0.24.0",
    "structlog>=24.1.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
]
